k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argo-marketplace
  labels:
    app.kubernetes.io/name: argo-marketplace
