k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-marketplace
  namespace: argo-marketplace
  labels:
    app.kubernetes.io/name: argo-marketplace
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: argo-marketplace
